--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,12 +1,42 @@
-<section class="section lessons" id="lessons">
+<section class="pricing-section">
     <div class="container">
-        <h2 class="lessons__title-lg">Our <span class="underline">lessons</span></h2>
+    <h2 class="section-title">
+        Our <span class="underline">lessons</span>
+    </h2>
+    <p class="pricing-description">
+      Our lessons are carefully structured and interactive, designed to promote
+      rapid language acquisition through practical tasks and real-world scenarios.
+    </p>
+</div>
+<div>
+    <ul class="pricing-list">
+      <li class="pricing-item">
+        <h3>Practice</h3>
+        <p class="price">40$/month</p>
         <p class="subtitle">
-            Our lessons are carefully structured and interactive, designed to promote rapid language acquisition through
-            practical tasks and real-world scenarios
+            This plan offers an opportunity for learners to engage in collaborative language exercises and group activities, boosting their conversational skills and confidence in using English.
         </p>
-        <ul class="lessons__card-list">
-            
-        </ul>
-    </div>
-</section>
+        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+      </li>
+      
+      <li class="pricing-item highlight">
+        <h3>Standard</h3>
+        <p class="price">70$/month</p>
+        <p class="subtitle">
+            Our standard package provides a balanced learning approach that covers all key areas of English language - reading, writing, listening, and speaking.  It is a set of basic knowledge and skills.
+        </p>
+        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+      </li>
+      
+      <li class="pricing-item">
+        <h3>Individual</h3>
+        <p class="price">99$/month</p>
+        <p class="subtitle">
+            We offer a tailored learning experience with individualized instruction that focuses on a learner's specific language goals and challenges, offering personal feedback.
+        </p>
+        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+      </li>
+    </ul>
+</div>
+  </section>
+  
