--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -14,11 +14,11 @@
         <ul class="team-list card-set">
             <li class="team-item card-set-item">
                 <img
-                    src="../img/teachers/maria-1x.webp"
+                    src="./img/teachers/maria-1x.webp"
                     alt="maria"
                     srcset="
-                        ../img/teachers/maria-1x.webp 1x,
-                        ../img/teachers/maria-2x.webp 2x
+                        ./img/teachers/maria-1x.webp 1x,
+                        ./img/teachers/maria-2x.webp 2x
                     "
                     width="150"
                     height="150"
@@ -35,11 +35,11 @@
             </li>
             <li class="team-item card-set-item">
                 <img
-                    src="../img/teachers/artem-1x.webp"
+                    src="./img/teachers/artem-1x.webp"
                     alt="artem"
                     srcset="
-                        ../img/teachers/artem-1x.webp 1x,
-                        ../img/teachers/artem-2x.webp 2x
+                        ./img/teachers/artem-1x.webp 1x,
+                        ./img/teachers/artem-2x.webp 2x
                     "
                     width="150"
                     height="150"
@@ -56,11 +56,11 @@
             </li>
             <li class="team-item card-set-item">
                 <img
-                    src="../img/teachers/ilona-1x.webp"
+                    src="./img/teachers/ilona-1x.webp"
                     alt="ilona"
                     srcset="
-                        ../img/teachers/ilona-1x.webp 1x,
-                        ../img/teachers/ilona-2x.webp 2x
+                        ./img/teachers/ilona-1x.webp 1x,
+                        ./img/teachers/ilona-2x.webp 2x
                     "
                     width="150"
                     height="150"
@@ -77,11 +77,11 @@
             </li>
             <li class="team-item card-set-item">
                 <img
-                    src="../img/teachers/volodymyr-1x.webp"
+                    src="./img/teachers/volodymyr-1x.webp"
                     alt="volodymyr"
                     srcset="
-                        ../img/teachers/volodymyr-1x.webp 1x,
-                        ../img/teachers/volodymyr-2x.webp 2x
+                        ./img/teachers/volodymyr-1x.webp 1x,
+                        ./img/teachers/volodymyr-2x.webp 2x
                     "
                     width="150"
                     height="150"
