--- a/src/partials/cta.html
+++ b/src/partials/cta.html
@@ -12,7 +12,7 @@
                 <ul class="cta-card-list">
                     <li class="cta-list-item">
                         <svg class="cta-list-svg" width="20" height="20">
-                            <use href="../img/sprite.svg#icon-check"></use>
+                            <use href="./img/sprite.svg#icon-check"></use>
                         </svg>
                         <p class="cta-list-text">
                             Dive into captivating lessons designed to stimulate
@@ -21,7 +21,7 @@
                     </li>
                     <li class="cta-list-item">
                         <svg class="cta-list-svg" width="20" height="20">
-                            <use href="../img/sprite.svg#icon-check"></use>
+                            <use href="./img/sprite.svg#icon-check"></use>
                         </svg>
                         <p class="cta-list-text">
                             Learn in a nurturing setting where every student's
@@ -30,7 +30,7 @@
                     </li>
                     <li class="cta-list-item">
                         <svg class="cta-list-svg" width="20" height="20">
-                            <use href="../img/sprite.svg#icon-check"></use>
+                            <use href="./img/sprite.svg#icon-check"></use>
                         </svg>
                         <p class="cta-list-text">
                             Experience the satisfaction of real progress as your
