--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -19,8 +19,8 @@
 
                         <div class="feedback-photo">
 
-                            <img srcset="../img/testimonials/img-1.jpg x1, ../img/testimonials/img-1@2x.jpg 2x"
-                                src="../img/testimonials/img-1.jpg" alt="anna-photo">
+                            <img srcset="./img/testimonials/img-1.jpg x1, ./img/testimonials/img-1@2x.jpg 2x"
+                                src="./img/testimonials/img-1.jpg" alt="anna-photo">
 
                         </div>
 
@@ -51,8 +51,8 @@
 
                         <div class="feedback-photo">
 
-                            <img srcset="../img/testimonials/img-2.jpg x1, ../img/testimonials/img-2@2x.jpg 2x"
-                                src="../img/testimonials/img-2.jpg" alt="mykhailo-photo">
+                            <img srcset="./img/testimonials/img-2.jpg x1, ./img/testimonials/img-2@2x.jpg 2x"
+                                src="./img/testimonials/img-2.jpg" alt="mykhailo-photo">
 
                         </div>
 
@@ -82,8 +82,8 @@
 
                         <div class="feedback-photo">
 
-                            <img srcset="../img/testimonials/img-3.jpg x1, ../img/testimonials/img-3@2x.jpg 2x"
-                                src="../img/testimonials/img-3.jpg" alt="victoria-photo">
+                            <img srcset="./img/testimonials/img-3.jpg x1, ./img/testimonials/img-3@2x.jpg 2x"
+                                src="./img/testimonials/img-3.jpg" alt="victoria-photo">
 
                         </div>
 
