--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -9,10 +9,8 @@
 .feedback-list {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
-    /* Мобільна версія: картки одна під одною */
-    row-gap: 20px;
 }
 
 .feedback-card {
@@ -88,7 +86,7 @@
         flex-direction: row;
 
         justify-content: center;
-        align-items: stretch; /* Щоб усі картки мали однакову висоту */
+        align-items: stretch;
         gap: 32px;
     }
 
@@ -101,9 +99,12 @@
 }
 
 @media screen and (min-width: 1280px) {
+    .feedback-list {
+        width: 1024px;
+    }
+
     .feedback-card {
         display: flex;
-        flex: 1 1 calc(33.333% - 20px); /* Три картки в ряд */
         max-width: 320px;
     }
 }
