--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,6 +1,6 @@
 <section class="section application" id="application">
     <div class="container">
-        <div class="application-title">
+        <div class="section-header">
             <h2 class="section-title">
                 Leave an <span class="underline">application</span>
             </h2>
