--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -2,11 +2,15 @@
 
     <div class="container">
 
-        <div class="feedback-title">
+        <div class="section-header">
 
-            <h2 class="feedback-head">What our <span class="underline">students</span> say</h2>
+            <h2 class="section-title">
+                What our
+                <span class="underline">students</span>
+                say
+            </h2>
 
-            <p class="subtitle">
+            <p class="section-description">
                 Hear from our students about their learning journey with us, as they share their experiences, progress,
                 and the transformative impact
             </p>
