--- a/src/css/common.css
+++ b/src/css/common.css
@@ -43,11 +43,17 @@ h6 {
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 700;
     line-height: 1.2;
     text-align: center;
     letter-spacing: -0.02em;
+    margin-bottom: 14px;
+    
+    @media screen and (min-width: 768px) {
+        font-size: 40px;
+        margin-bottom: 16px;
+    }
 }
 
 .section {
