--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,9 +3,9 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./cta.css');
-@import url("./about.css");
-@import url("./team.css");
-@import url("./application.css");
+@import url('./about.css');
+@import url('./team.css');
+@import url('./application.css');
 @import url('./mobile-menu.css');
-@import url("./footer.css");
-@import url("./feedback.css");
+@import url('./footer.css');
+@import url('./feedback.css');
