Update max-width for section-description in application.css and adjust margin in common.css

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,5 +1,9 @@
 .application .section-description {
     max-width: 709px;
+
+    @media screen and (min-width: 768px) {
+        max-width: 586px;
+    }
 }
 
 .application-block {
