Refactor CSS styles for pricing section and update HTML structure for better semantics

--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -3,7 +3,7 @@
     <h2 class="section-title">
         Our <span class="underline">lessons</span>
     </h2>
-    <p class="pricing-description">
+    <p class="section-description">
       Our lessons are carefully structured and interactive, designed to promote
       rapid language acquisition through practical tasks and real-world scenarios.
     </p>
@@ -12,29 +12,29 @@
     <ul class="pricing-list">
       <li class="pricing-item">
         <h3>Practice</h3>
-        <p class="price">40$/month</p>
-        <p class="subtitle">
+        <p class="price">40$ / month</p>
+        <p class="description">
             This plan offers an opportunity for learners to engage in collaborative language exercises and group activities, boosting their conversational skills and confidence in using English.
         </p>
-        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+        <a href="#application" class="btn btn-primary" aria-label="Leave an application">Leave an application</a>
       </li>
       
       <li class="pricing-item highlight">
         <h3>Standard</h3>
-        <p class="price">70$/month</p>
-        <p class="subtitle">
+        <p class="price">70$ / month</p>
+        <p class="description">
             Our standard package provides a balanced learning approach that covers all key areas of English language - reading, writing, listening, and speaking.  It is a set of basic knowledge and skills.
         </p>
-        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+        <a href="#application" class="btn btn-inverse" aria-label="Leave an application">Leave an application</a>
       </li>
       
       <li class="pricing-item">
         <h3>Individual</h3>
-        <p class="price">99$/month</p>
-        <p class="subtitle">
+        <p class="price">99$ / month</p>
+        <p class="description">
             We offer a tailored learning experience with individualized instruction that focuses on a learner's specific language goals and challenges, offering personal feedback.
         </p>
-        <a href="#application" class="btn" aria-label="Leave an application">Leave an application</a>
+        <a href="#application" class="btn btn-primary" aria-label="Leave an application">Leave an application</a>
       </li>
     </ul>
 </div>
