--- a/src/css/common.css
+++ b/src/css/common.css
@@ -79,8 +79,7 @@ h2 {
 }
 
 .section-description {
-    margin-top: 16px;
-
+    margin: 16px auto 0;
     opacity: 0.5;
     font-size: 14px;
     text-align: center;
