--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,4 +1,4 @@
-<section class="pricing-section">
+<section class="pricing-section" id="lessons">
     <div class="container">
       <div class="section-header">
         <h2 class="section-title">
