fix validator errors and warnings

--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -53,14 +53,14 @@
 }
 
 .student-name {
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 20px;
     line-height: 24px;
     letter-spacing: -0.02px;
 }
 
 .student-position {
-    font-weight: 400px;
+    font-weight: 400;
     font-size: 12px;
     line-height: 16px;
     opacity: 0.5;
