--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -81,8 +81,8 @@
   }
   
   .pricing-item .price {
-    width: 184;
-    height: 44;
+    width: 184px;
+    height: 44px;
     top: 72px;
     left: 68px;
     font-size: 32px;
