--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -1,9 +1,13 @@
+  .lessons .container {
+    padding: 0 20px;
+  }
+  
   .pricing-section {
-    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
 
-    @media screen and (min-width: 1158px) {
+    @media screen and (min-width: 1280px) {
       padding: 0 64px;
     }
   }
@@ -18,8 +22,9 @@
   }
   
   .pricing-list {
+    list-style-type: none;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 2rem;
     justify-content: center;
     padding: 0;
@@ -37,11 +42,15 @@
       padding: 0;
       justify-content: start;
       margin: 64px auto 150px;
+
+      flex-direction: row;
+      flex-wrap: wrap;
+      max-width: 704px;
     }
 
-    @media screen and (min-width: 1158px) {
+    @media screen and (min-width: 1280px) {
       max-width: 100%;
-      padding: 0 32px;
+      justify-content: center;
     }
   }
   
@@ -81,6 +90,10 @@
   }
   
   .pricing-item .price {
+    white-space: nowrap;
+    text-align: center;
+    display: inline-block; /* Ensures inline alignment */
+    padding: 0 10px; /* Adds spacing for better layout */
     width: 184px;
     height: 44px;
     top: 72px;
