--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -5,7 +5,7 @@
   .pricing-section {
     width: 100%;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 50px 20px;
 
     @media screen and (min-width: 1280px) {
       padding: 0 64px;
@@ -35,13 +35,12 @@
     /* letter-spacing: -0.025em; */
     list-style: none;
     margin-top: 64px;
-    margin-bottom: 150px;
 
     @media screen and (min-width: 768px) {
       max-width: 704px;
       padding: 0;
       justify-content: start;
-      margin: 64px auto 150px;
+      margin: 64px auto;
 
       flex-direction: row;
       flex-wrap: wrap;
