fix footer icons

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -116,33 +116,49 @@
 .nav-item.white:not(:last-child) {
     padding-bottom: 20px;
 }
-.soc-items.white {
+.soc-items {
+    margin: 0;
+    padding: 0;
+
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content:left;
+    justify-content: space-between;
     gap: 12px;
+    list-style: none;
+
+    display: none;
+
+    @media screen and (min-width: 1280px) {
+        display: flex;
+    }
 } 
-.soc-link.white {
-    color: var(--color-white);
-    display: block;
-    background-color: transparent;
-    width: 44px;
-    height: 44px;
-    transition:
-        box-shadow var(--animation),
-        transform var(--animation);
-    border-radius: 10px;
-}
-.soc-link.white:hover,
-.soc-link.white:focus {
-    color: var(--color-green);
-    box-shadow: 0 1px 4px var(--color-green); 
+.soc-link:hover,
+.soc-link:focus {
+    box-shadow: 0 1px 4px var(--color-green);
     transform: translateY(-1px);
 }
-.soc-icon.white {
+.soc-link {
+    display: block;
+    color: var(--color-white);
+    background-color: transparent;
+    text-decoration: none;
+    transition: box-shadow var(--animation), transform var(--animation);
+    border-radius: 10px;
+    border: 1px solid var(--color-white-10);
+}
+.soc-link {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center; 
+}
+.icon {
+    width: 70%;
+    height: 70%;
     fill: var(--color-white);
 }
-
 .scroll-icon.up {
     transform: rotate(180deg);
 }
