--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -66,47 +66,43 @@
                     >
                 </li>
             </ul>
-            <ul class="soc-items white">
-                <li class="soc-item">
-                    <a
-                        href="https://www.facebook.com/goITclub/"
-                        class="soc-link white"
-                        aria-label="Facebook"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                    >
-                        <svg class="soc-icon white" width="44" height="44">
-                            <use href="./img/icons/sprites.svg#facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="soc-item">
-                    <a
-                        href="https://www.instagram.com/goitclub/ "
-                        class="soc-link white"
-                        aria-label="Instagram"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                    >
-                        <svg class="soc-icon white" width="44" height="44">
-                            <use href="./img/icons/sprites.svg#instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="soc-item">
-                    <a
-                        href="https://www.youtube.com/c/GoIT"
-                        class="soc-link white"
-                        aria-label="Youtube"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                    >
-                        <svg class="soc-icon white" width="44" height="44">
-                            <use href="./img/icons/sprites.svg#youtube"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+            <div class="soc-container">
+                <ul class="soc-items">
+                    <li class="soc-item">
+                        <a
+                            href="https://www.facebook.com/goITclub/"
+                            class="soc-link"
+                            aria-label="Facebook"
+                            target="_blank">
+                            <svg class="icon">
+                                <use href="./img/icons/sprites.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-item">
+                        <a
+                            href="https://www.instagram.com/goitclub/ "
+                            class="soc-link"
+                            aria-label="Instagram"
+                            target="_blank">
+                            <svg class="icon">
+                                <use href="./img/icons/sprites.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-item">
+                        <a
+                            href="https://www.youtube.com/c/GoIT"
+                            class="soc-link"
+                            aria-label="Youtube"
+                            target="_blank">
+                            <svg class="icon">
+                                <use href="./img/icons/sprites.svg#youtube"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="footer-end">
             <p class="small-footer-text">
