--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -32,18 +32,21 @@
                         type="text"
                         name="user-name"
                         placeholder="Name"
+                        required
                    />
                     <input
                         class="application-form-input"
                         type="email"
                         name="user-email"
                         placeholder="Email"
+                        required
                    />
                     <input
                         class="application-form-input"
                         type="tel"
                         name="user-phone"
                         placeholder="Phone"
+                        required
                    />
                     <textarea
                         class="application-form-input teaxtarea-input"
