fix mobile btns in footer

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -132,6 +132,11 @@
     @media screen and (min-width: 1280px) {
         display: flex;
     }
+
+    @media screen and (min-width: 320px) {
+        justify-content: start;
+        display: flex;
+    }
 } 
 .soc-link:hover,
 .soc-link:focus {
