--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -23,10 +23,7 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-
-                        <img srcset="./img/testimonials/img-1.jpg x1, ./img/testimonials/img-1@2x.jpg 2x"
-                            src="./img/testimonials/img-1.jpg" alt="anna-photo">
-
+                        <img src="./img/testimonials/img-1.jpg" alt="anna-photo">
                     </div>
 
                     <div class="student-info">
@@ -55,10 +52,7 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-
-                        <img srcset="./img/testimonials/img-2.jpg x1, ./img/testimonials/img-2@2x.jpg 2x"
-                            src="./img/testimonials/img-2.jpg" alt="mykhailo-photo">
-
+                        <img src="./img/testimonials/img-2.jpg" alt="mykhailo-photo">
                     </div>
 
                     <div class="student-info">
@@ -86,10 +80,7 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-
-                        <img srcset="./img/testimonials/img-3.jpg x1, ./img/testimonials/img-3@2x.jpg 2x"
-                            src="./img/testimonials/img-3.jpg" alt="victoria-photo">
-
+                        <img src="./img/testimonials/img-3.jpg" alt="victoria-photo">
                     </div>
 
                     <div class="student-info">
