update feedback icons

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -23,7 +23,21 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-                        <img src="./img/testimonials/img-1.jpg" alt="anna-photo">
+                        <picture class="feedback-item-photo">
+                            <source
+                                srcset="
+                                    ./img/feedback/anna-1x.webp 1x,
+                                    ./img/feedback/anna-2x.webp 2x,
+                                    ./img/feedback/anna-3x.webp 3x
+                                " type="image/webp"/>
+                            <source
+                                srcset="
+                                    ./img/feedback/anna-1x.png 1x,
+                                    ./img/feedback/anna-2x.png 2x,
+                                    ./img/feedback/anna-3x.png 3x
+                                " type="image/png"/>
+                            <img src="./img/teachers/maria-1x.png" width="50" height="50" alt="Anna photo" loading="lazy"
+                        /></picture>
                     </div>
 
                     <div class="student-info">
@@ -52,7 +66,26 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-                        <img src="./img/testimonials/img-2.jpg" alt="mykhailo-photo">
+                        <picture class="feedback-item-photo">
+                            <source
+                                srcset="
+                                    ./img/feedback/mykhailo-1x.webp 1x,
+                                    ./img/feedback/mykhailo-2x.webp 2x,
+                                    ./img/feedback/mykhailo-3x.webp 3x
+                                " type="image/webp"/>
+                            <source
+                                srcset="
+                                    ./img/feedback/mykhailo-1x.png 1x,
+                                    ./img/feedback/mykhailo-2x.png 2x,
+                                    ./img/feedback/mykhailo-3x.png 3x
+                                " type="image/png"/>
+                            <img
+                                src="./img/teachers/mykhailo-1x.png"
+                                width="50"
+                                height="50"
+                                alt="Mykhailo photo"
+                                loading="lazy"
+                        /></picture>
                     </div>
 
                     <div class="student-info">
@@ -80,7 +113,26 @@
                 <div class="feedback-info">
 
                     <div class="feedback-photo">
-                        <img src="./img/testimonials/img-3.jpg" alt="victoria-photo">
+                        <picture class="feedback-item-photo">
+                            <source
+                                srcset="
+                                    ./img/feedback/victoria-1x.webp 1x,
+                                    ./img/feedback/victoria-2x.webp 2x,
+                                    ./img/feedback/victoria-3x.webp 3x
+                                " type="image/webp"/>
+                            <source
+                                srcset="
+                                    ./img/feedback/victoria-1x.png 1x,
+                                    ./img/feedback/victoria-2x.png 2x,
+                                    ./img/feedback/victoria-3x.png 3x
+                                " type="image/png"/>
+                            <img
+                                src="./img/teachers/victoria-1x.png"
+                                width="50"
+                                height="50"
+                                alt="victoria photo"
+                                loading="lazy"
+                        /></picture>
                     </div>
 
                     <div class="student-info">
